# HMAR

./: CMakeLists.txt  README.md  kinect_tmp.cpp  traj_data_circles_lines.txt  traj_data_cleaning.txt  traj_data_constrained_unconstrained_movement.txt  traj_data_cutting1.txt  traj_data_cutting2.txt  traj_data_infinitysign.txt  traj_data_randomness.txt  util.cpp  util.h
